# KickCAT

./: CMakeLists.txt
examples/master/: CMakeLists.txt
examples/master/eoe/: CMakeLists.txt  eoe_camera_master.cc  eoe_example.cc
examples/slave/nuttx/lan9252/freedom-k64f/: CMakeLists.txt  main.cc  main_eoe.cc
examples/slave/rpi/lan9252/: CMakeLists.txt  main_eoe_camera.cc
lib/: CMakeLists.txt
lib/include/kickcat/: Error.h  Mailbox.h  debug.h
lib/include/kickcat/EoE/: protocol.h
lib/include/kickcat/EoE/mailbox/: request.h  response.h
lib/master/: CMakeLists.txt
lib/master/include/kickcat/: Bus.h
lib/master/src/: EoE.cc  Slave.cc
lib/slave/include/kickcat/: ESM.h
lib/slave/include/kickcat/slave/: Slave.h
lib/slave/src/: ESMStates.cc
lib/src/: Mailbox.cc
lib/src/CoE/mailbox/: request.cc
lib/src/EoE/mailbox/: request.cc  response.cc
scripts/: build_slave_bin.sh
unit/src/: slave-t.cc
